--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@opennextjs/cloudflare": "1.3.0",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "next": "15.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0"
